[tool.poetry]
name = "understory-cache"
version = "0.0.1"
description = "Cache URLs and their contents"
authors = ["Angelo Gladding <angelo@ragt.ag>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
